# $Id$

include $(top_srcdir)/Makefile.decl

noinst_LIBRARIES = libyenma_common.a

libyenma_common_a_SOURCES = daemon_stuff.c configloader.c \
	protocolhandler.c listenerthread.c socketwriter.c socketreader.c filereader.c \
	socketlistener.c socketaddress.c cryptomutex.c milteraux.c atomiccounter.c refcountobj.c \
	atomiccounter.h configloader.h cryptomutex.h daemon_stuff.h filereader.h listenerthread.h \
	milteraux.h protocolhandler.h refcountobj.h socketaddress.h socketlistener.h \
	socketreader.h socketwriter.h timeop.h
