# $Id$

include $(top_srcdir)/Makefile.decl
CPPFLAGS += -I$(top_srcdir)/libsauth/include

noinst_LTLIBRARIES = libsauth_base.la

libsauth_base_la_SOURCES = bitmemcmp.c foldstring.c inet_ppton.c inetdomain.c inetmailbox.c \
	inetmailheaders.c intarray.c keywordmap.c loghandler.c pstring.c ptrarray.c strarray.c \
	strpairarray.c strpairlist.c xbuffer.c xparse.c xskip.c \
	bitmemcmp.h inet_ppton.h inetdomain.h strpairlist.h
