# $Id$

include $(top_srcdir)/Makefile.decl
CPPFLAGS += -I$(top_srcdir)/libsauth/include -I$(top_srcdir)/libsauth/base

noinst_LTLIBRARIES = libsauth_spf.la

libsauth_spf_la_SOURCES = sidfpra.c spfenum.c spfevalpolicy.c spfevaluator.c spfmacro.c spfrecord.c \
	spfenum.h spfevalpolicy.h spfevaluator.h spflogger.h spfmacro.h spfrecord.h
