# $Id$

include $(top_srcdir)/Makefile.decl
AM_CPPFLAGS += -I../include -I../base

noinst_LTLIBRARIES = libsauth_spf.la

libsauth_spf_la_SOURCES = sidfpra.c spfenum.c spfevalpolicy.c spfevaluator.c spfmacro.c spfrecord.c \
	spfenum.h spfevalpolicy.h spfevaluator.h spflogger.h spfmacro.h spfrecord.h
